# playground

./: .env.example  .gitignore  LICENSE  README.md  adguard.docker-compose.yml  adsb-ultrafeeder.docker-compose.yml  ai-chat.docker-compose.yml  ai-code.docker-compose.yml  ai-comfyui.docker-compose.yml  ai-invoke-ai.docker-compose.yml  ai-localai.docker-compose.yml  ai-perplexica.docker-compose.yml  anythingllm.docker-compose.yml  appsmith.docker-compose.yml  arena.docker-compose.yml  authelia.docker-compose.yml  authelia.yml  baikal.docker-compose.yml  caddy-security.Dockerfile  caddy.Dockerfile  caddy.docker-compose.yml  caddy.internal.docker-compose.yml  cobalt-tools.docker-compose.yml  counter-strike.docker-compose.yml  crowdsec.docker-compose.yml  debian.docker-compose.yml  discount-bandit.docker-compose.yml  duckdns.docker-compose.yml  elasticsearch.docker-compose.yml  envoy-demo.yml  envoy-oauth.yml  envoy.docker-compose.yml  fail2ban.docker-compose.yml  firefox.docker-compose.yml  foldingathome.docker-compose.yml  freqtrade.docker-compose.yml  frigate.docker-compose.yml  gaming.docker-compose.yml  glances.docker-compose.yml  gluetun.docker-compose.yml  (+41 more)
android/: settings.gradle.kts
dotnet/: .gitignore
iris/: go.mod  go.sum  main.go
litestar-app/: README.md  pyproject.toml
litestar-app/litestar_app/: app.py
loopback/: package-lock.json  package.json
my-tauri-app/: README.md
nextjs-openai/: package.json
nextjs-typescript-starter/: pnpm-lock.yaml
python/: main.py
python-track-changes/: .gitignore  crypto_script.py  employees_script.py
(+99 files in other folders)
